# snapmark

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: icon.icns
docs/: HOMEBREW_CASK_RELEASE.md  IMPLEMENTATION_STATUS.md  PRD_snapmark.md
packaging/homebrew/Casks/: snapmark.rb  snapmark.rb.template
scripts/: build_macos_app.sh  build_release_dmg.sh  generate_cask.sh  generate_icons_from_svg.sh
src/: action_bar.rs  annotation.rs  app.rs  canvas.rs  clipboard.rs  flatten.rs  history.rs  main.rs  state.rs  theme.rs  toolbar.rs  ui_controls.rs
src/platform/: color_panel_macos.rs  macos.rs  mod.rs  stub.rs  vibrancy_macos.rs
