[package]
name = "snapmark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = "0.27"
arboard = "3.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
tiny-skia = "0.11"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSAlert", "NSColor", "NSColorPanel", "NSGraphics", "NSImage", "NSMenu", "NSMenuItem", "NSPanel", "NSPasteboard", "NSRunningApplication", "NSScreen", "NSResponder", "NSStatusBar", "NSStatusItem", "NSView", "NSVisualEffectView", "NSWindow"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSThread"] }

[build-dependencies]
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package.objc2]
debug-assertions = false

[profile.dev.package.icrate]
debug-assertions = false
